fix: z-index in menu-block

--- a/css/style.css
+++ b/css/style.css
@@ -1673,7 +1673,7 @@ template {
     left: 0;
     top: 0;
     right: 0;
-    z-index: 99;
+    z-index: 4599;
   }
   .navbar__user--mobile_hidden, .navbar__search--mobile_hidden {
     display: none;
