--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -111,7 +111,7 @@
                 left: 0
                 top: 0
                 right: 0
-                z-index: 99
+                z-index: 4599
         &__user, &__search
             &--mobile
                 &_hidden
